# my-webrtc-builds

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: build-android.yml  build-ios.yml  build-macos-arm64.yml  build-macos-x64.yml  build-windows-x64.yml  package-macos-xcframework.yml  probe-windows-verifier-tools.yml  publish-macos-android-preview.yml  publish-release.yml
builder/: __init__.py  __main__.py  build.py  commands.py  compose.py  config.py  metadata.py  observability.py  package.py  snapshot.py  source.py  verify.py
docs/: runbook.md  windows-verifier-tool-probe-2026-07-13.md
docs/adr/: 0001-build-from-pinned-source-snapshots.md
docs/research/: 2026-07-14-android-aar-apple-low-latency-rate-control.md
examples/: cast-tuning-detail-idle.json
overlays/m150/common/api/cast_tuning/: BUILD.gn  cast_tuning_config.cc  cast_tuning_config.h  cast_tuning_config_unittest.cc  cast_tuning_controller.cc  cast_tuning_controller.h  cast_tuning_json.cc  cast_tuning_json_contract_test.cc  cast_tuning_recovery.cc  cast_tuning_recovery.h  cast_tuning_telemetry.cc  cast_tuning_telemetry.h  webrtc_cast_tuning_backend.cc  webrtc_cast_tuning_backend.h
patches/m150/: SOURCES.md  android_java17.patch  android_java8.patch  cast_tuning_hooks.patch  h265_ios.patch  (+4 more)
tests/: test_build.py  test_cast_tuning_overlay.py  test_commands.py  test_compose.py  test_config.py  test_metadata.py  test_observability.py  test_package.py  test_snapshot.py  test_verify.py
tools/: android-aar-smoke.sh  run-macos-videotoolbox-probe.sh
(+26 files in other folders)
